# gridlog

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  PROMPTS.md  README.md  STORY.md  docker-compose.yml  pyproject.toml
fixtures/: se3_da_2026-04-13.xml  se3_da_2026-04-14.xml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  PriceChart.tsx  api.ts  styles.css
gridlog/: config.py
gridlog/api/: __init__.py  app.py
gridlog/entsoe/: __init__.py  client.py  parser.py
gridlog/grpc_service/: __init__.py  server.py
gridlog/ingest/: __init__.py  pipeline.py
gridlog/query/: __init__.py  prices.py
gridlog/store/: series.py
proto/: prices.proto
scripts/: capture_fixture.py  demo_diff.py  demo_grpc.py  gen_proto.sh  init_db.py  run_api.py  run_grpc.py  run_ingest.py
tests/integration/: test_api.py  test_grpc.py  test_query.py
tests/unit/: test_parser.py
