[project]
name = "gridlog"
version = "0.1.0"
description = "Intraday energy price tracker with full time-of-knowledge history"
requires-python = ">=3.11"
dependencies = [
    "timedb",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "grpcio-tools>=1.60",
]

[tool.setuptools.packages.find]
include = ["gridlog*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a running TimeDB; opt-in via `pytest -m integration`",
]
addopts = ["-m", "not integration"]
